compile weasis-imageioext and skip *.original.jar

--- a/weasis-distributions/etc/config/ext-config.properties
+++ b/weasis-distributions/etc/config/ext-config.properties
@@ -8,8 +8,8 @@
 #weasis.look=org.pushingpixels.substance.api.skin.SubstanceSaharaLookAndFeel
 #weasis.look.linux=org.pushingpixels.substance.api.skin.SubstanceGraphiteAquaLookAndFeel
 #weasis.confirm.closing=false
-#weasis.language=fr
-#weasis.country=CH
+weasis.language=zh
+weasis.country=CN
 #weasis.variant=
 
 ##### Properties not visible in GUI and not stored in local preferences, always used #####
