--- a/weasis-imageioext/pom.xml
+++ b/weasis-imageioext/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<artifactId>weasis-parent</artifactId>
 		<groupId>org.weasis</groupId>
-		<version>1.5-SNAPSHOT</version>
+		<version>1.21-SNAPSHOT</version>
 		<relativePath>../weasis-parent/pom.xml</relativePath>
 	</parent>
 	<dependencies />
@@ -19,7 +19,7 @@
 		<module>weasis-imageioext-parent</module>
 		<module>weasis-imageioext-j2k-codec</module>
 		<module>weasis-imageioext-j2k-codec-windows-x86</module>
-		<!--		<module>weasis-imageioext-j2k-codec-windows-x86-64</module>-->
+		<module>weasis-imageioext-j2k-codec-windows-x86-64</module>
 		<module>weasis-imageioext-j2k-codec-linux-x86</module>
 		<module>weasis-imageioext-j2k-codec-linux-x86-64</module>
 		<module>weasis-imageioext-j2k-codec-macosx-x86</module>
