--- a/weasis-imageioext/weasis-imageioext-j2k-codec-macosx-x86/pom.xml
+++ b/weasis-imageioext/weasis-imageioext-j2k-codec-macosx-x86/pom.xml
@@ -24,6 +24,7 @@
 						<Bundle-NativeCode>lib/libkdu_jni.jnilib; processor=x86; osname=MacOSX</Bundle-NativeCode>
 						<Fragment-Host>weasis-imageioext-j2k-codec;bundle-version="0.5.2"</Fragment-Host>
 						<Embed-StripVersion>true</Embed-StripVersion>
+						<Embed-Dependency>*;scope=compile;inline=false</Embed-Dependency>
 					</instructions>
 				</configuration>
 			</plugin>
