--- a/weasis-imageioext/weasis-imageioext-j2k-codec-windows-x86-64/pom.xml
+++ b/weasis-imageioext/weasis-imageioext-j2k-codec-windows-x86-64/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>weasis-imageioext-parent</artifactId>
 		<groupId>org.weasis.imageioext</groupId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.4-SNAPSHOT</version>
 		<relativePath>../weasis-imageioext-parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -26,6 +26,7 @@
 						<Fragment-Host>weasis-imageioext-j2k-codec;bundle-version="0.5.2"</Fragment-Host>
 						<Embed-Directory>.</Embed-Directory>
 						<Embed-StripVersion>true</Embed-StripVersion>
+						<Embed-Dependency>*;scope=compile;inline=false</Embed-Dependency>
 					</instructions>
 				</configuration>
 			</plugin>
